Fixing slider overflow issue

--- a/_src/scss/partials/_unslider.scss
+++ b/_src/scss/partials/_unslider.scss
@@ -34,6 +34,7 @@
   width: 27px;
   height: 45px;
   top: 50%;
+  transform: translateY(-50%);
 }
 
 .unslider-arrow.next{
